[package]
name = "r2d2_arangors"
version = "0.1.0"
authors = ["Rafael Aggeler <r.aggeler@gmx.net>"]
license = "MIT"
description = "ArangoDB support for the r2d2 connection pool"
repository = "https://github.com/inzanez/r2d2-arangors"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arangors = { version = "0.3", features = ["reqwest_blocking"], default-features = false }
r2d2 = "0.8.8"
